<resources>
    <string name="app_name">BreadBoard</string>

    <string name="loginButton">Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="or">or&#8230;</string>
    <string name="createNewAccount">Create new account</string>

    <string name="settings">Settings</string>

    <string name="numQuestions">Number of Questions: %1$s</string>
    <string name="quizCodeField">Quiz Code: %1$s</string>
    <string name="quizName">Quiz Name: %1$s</string>
    <string name="quizNameBlank">Quiz Name</string>
    <string name="className">Class: %1$s</string>
    <string name="classNameBlank">Class Name</string>
    <string name="timeLimit">Time Limit: %1$s minutes</string>
    <string name="timeLimitNone">Time Limit: none</string>
    <string name="timeLimitBlank">Time Limit (Optional)</string>
    <string name="dueDate">Due Date: %1$s</string>
    <string name="dueDateBlank">Due Date (MM-DD-YYYY)</string>
    <string name="delayedAnswersBlank">MM-DD-YYYY</string>
    <string name="averageTime">Average: %1$.2f seconds</string>
    <string name="averageGraded">Average: %1$.2f</string>
    <string name="immediatelyActive">Quiz Active</string>
    <string name="delayedActive">Quiz Inactive</string>
    <string name="Bdelete">Delete</string>
    <string name="Bgrades">Grades</string>
    <string name="Bmodify">Modify</string>
    <string name="Bstats">Stats</string>

    <string name="logoDescription">logo</string>
    <string name="warningText">Warning!!!</string>
    <string name="confirmSubmission">Confirm Submission</string>
    <string name="totalQuestions">%1$d</string>
    <string name="quizInformation">Quiz Information</string>
    <string name="returnToDash">Return to Dashboard</string>
    <string name="timeWarning">You have 5 minutes remaining to finish the quiz!</string>


    <string name="incompleteWarning22222">*inhales* UNEXPECTED ITEM IN THE BAGGING AREA!!!!</string>


    <string name="incompleteWarning">You will not receive credit for unanswered questions.</string>
    <string name="incompleteSubmission">You still have unanswered questions! Are you sure you want to submit?</string>
    <string name="incompleteSubmit">You have run out of time. Your answers will be submitted as is.</string>
    <string name="clickToContinue">I understand. Continue!</string>
    <string name="quizSubmitted">Quiz Submitted Successfully!</string>
    <string name="confirmCodeIs">Your confirmation code is&#8230;</string>
    <string name="takeQuiz">Take Quiz</string>
    <string name="score">Score: %1$f</string>
    <string name="answerKey">View Answer Key</string>
    <string name="answerKeyHeader">Answer Key</string>
    <string name="answerSelected"><u>Answer Selected</u></string>

    <string name="alertTitle">Warning</string>
    <string name="alertFinished">Out of Time</string>
    <string name="alertOK">OK</string>
    <string name="alertContinue">Continue</string>
    <string name="alertSubmit">Submit</string>
    <string name="alertBack">Go back</string>

    <string name="addQuestion">Adding Questions</string>
    <string name="question">Question</string>
    <string name="answer"><u>Answers</u></string>
    <string name="correct"><u>Correct Answer?</u></string>
    <string name="enterQ">Enter the question&#8230;</string>
    <string name="a1">Answer 1</string>
    <string name="a2">Answer 2</string>
    <string name="a3">Answer 3</string>
    <string name="a4">Answer 4</string>
    <string name="finishQuiz">Finish Quiz</string>
    <string name="nextQuestion">Next Question</string>
    <string name="emptyQuestionWarning">You cannot have empty questions.</string>

    <string name="changeEmail">Change Email</string>
    <string name="enterPW">Enter Password</string>
    <string name="enterOldEM">Enter Old Email</string>
    <string name="enterNewEM">Enter New Email</string>
    <string name="confirmNewEM">Confirm New Email</string>
    <string name="submitChanges">Submit Changes</string>

    <string name="changeFontSize">Change Font Size</string>
    <string name="selectFontSize">Select Font Size</string>
    <string name="exampleText">Example Text</string>
    <string name="currentFontSize">Sample font size</string>
    <string name="changePW">Change Password</string>
    <string name="enterOldPW">Enter Old Password</string>
    <string name="enterNewPW">Enter New Password</string>
    <string name="confirmNewPW">Confirm New Password</string>

    <string name="about">About</string>

    <string name="createNewQuiz">Create New Quiz</string>
    <string name="quizDueDate">Quiz Due Date</string>
    <string name="showAnswers"><u>Show Answers</u></string>
    <string name="immediately">Immediately</string>
    <string name="after">After: </string>
    <string name="addQuestions">Add Questions</string>

    <string name="loginAs">Login As: </string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>

    <string name="modifyQuestions">Modify Questions</string>
    <string name="finishModifyQuestions">Finish Modifications</string>
    <string name="modifyQuiz">Modify Quiz</string>

    <string name="timeLimitOption">Time Limit (optional)</string>
    <string name="setActive">Set Active</string>
    <string name="setInactive">Set Inactive</string>
    <string name="newDueDate">New Due Date</string>
    <string name="quizTitle">Quiz Title</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="quizCode">Quiz Code</string>

    <string name="avgTimetoAns">Average Time to Answer: </string>
    <string name="questionStat">Question x Statistics</string>
    <string name="hours">x hours</string>
    <string name="percentSign">%</string>
    <string name="returnToQuizStats">Return to Quiz Stats</string>
    <string name="returnToQuizDetails">Return to Quiz Details</string>
    <string name="returnToQuiz">Return to Quiz</string>

    <string name="confirmCode">Example Confirmation Code</string>

    <string name="quizCreateSucc">Quiz Created Successfully</string>
    <string name="quizCodeIs">Your Quiz Code is&#8230;</string>
    <string name="optionalGrade">Optional Grade</string>

    <string name="quizConfirmNumbers">Quiz Confirmation Numbers</string>
    <string name="studentName">Student Name</string>
    <string name="confirmNumbers">Confirmation Number</string>

    <string name="quizInfo">Quiz Information</string>

    <string name="quizStats">Quiz Statistics</string>
    <string name="sortBy">Sort By: </string>
    <string name="viewConfirmNumbs">View Confirmation Numbers</string>

    <string name="setting">Settings</string>

    <string name="enterNewQuizCode">Enter New Quiz Code</string>
    <string name="newQuizCode">New Quiz Code&#8230;</string>

    <string name="QuestionNumber">Question: </string>
    <string name="CurrentQuestionNum">%1$d/</string>
    <string name="TotalQuestionNum">%1$d</string>
    <string name="TimeRemaining">Time Remaining: %1$d:%2$d</string>
    <string name="QuizHeader">Quiz </string>
    <string name="SubmitQuiz">Submit Quiz </string>
    <string name="CorrectAnswer">Correct Answer </string>
    <string name="EnterQuestion">Enter the Question&#8230;</string>

    <string name="timeRemaining">Time remaining: </string>
    <string name="postQuizInfo"> Here some things you should know: </string>
    <string name="preQuizInfo"> Take this quiz? </string>

    <string name="welcomeMessage">Welcome, here are your quizzes.</string>
    <string name="newCode">Got a new code? Enter it here:</string>
    <string name="noAcc">Don\'t have an account? Click here</string>

    <string name="logout">Logout</string>

    <string-array name="sort_by_choices">
        <item>Average Time (High to low)</item>
        <item>Average Time (Low to high)</item>
        <item>Percent correct (High to low)</item>
        <item>Percent correct (Low to high)</item>
    </string-array>

</resources>
